--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-18  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* gcc.target/powerpc/p9-xxbr-1.c: Fix typos in submission.
+	* gcc.target/powerpc/p9-xxbr-2.c: Likewise.
+
 2017-01-18  Louis Krupp  <louis.krupp@zoho.com>
 
 	PR fortran/50069
