--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2017-01-18  Peter Bergner  <bergner@vnet.ibm.com>
+
+	PR target/78516
+	* config/rs6000/spe.md (mov_si<mode>_e500_subreg0): Fix constraints.
+	Use the evmergelohi instruction.
+	(mov_si<mode>_e500_subreg4_2_le): Likewise.
+	(mov_sitf_e500_subreg8_2_be): Likewise.
+	(mov_sitf_e500_subreg12_2_le): Likewise.
+	(mov_si<mode>_e500_subreg0_2_le): Fix constraints.
+	(mov_si<mode>_e500_subreg4_2_be): Likewise.
+	(mov_sitf_e500_subreg8_2_le): Likewise.
+	(mov_sitf_e500_subreg12_2_be): Likewise.
+
 2017-01-18  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* config/rs6000/altivec.md (altivec_vbpermq): Change "type"
