--- a/gcc/jit/ChangeLog
+++ b/gcc/jit/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-19  David Malcolm  <dmalcolm@redhat.com>
+
+	* dummy-frontend.c (jit_langhook_type_for_size): Delete.
+	(LANG_HOOKS_TYPE_FOR_SIZE): Don't redefine.
+
 2017-01-18  David Malcolm  <dmalcolm@redhat.com>
 
 	* dummy-frontend.c (jit_langhook_type_for_size): Implement, using
