--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-19  Jiong Wang  <jiong.wang@arm.com>
+
+	* config/aarch64/aarch64-arches.def: New entry for "armv8.3-a".
+	* config/aarch64/aarch64.h (AARCH64_FL_V8_3, AARCH64_FL_FOR_ARCH8_3,
+	AARCH64_ISA_V8_3, TARGET_ARMV8_3): New.
+	* doc/invoke.texi (AArch64 Options): Document "armv8.3-a".
+
 2017-01-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	* config/rs6000/rs6000-cpus.def (ISA_3_0_MASKS_SERVER): Enable
